--- a/hello-spring/build.gradle
+++ b/hello-spring/build.gradle
@@ -23,6 +23,11 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+//	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.2'
+	runtimeOnly 'com.h2database:h2'
+
 }
 
 tasks.named('test') {
